--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "predeploy": "npm run build",
     "build": "cross-env DISABLE_ESLINT_PLUGIN=true react-scripts build",
     "deploy": "gh-pages -d build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
    
   },
